@@ -16,6 +16,15 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.1.1" date="2018-09-04" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Update translations from zanata (es updated, 100% complete now)
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.1.0" date="2018-07-18" urgency="medium">
       <description>
         <ul>
